--- a/05C-Visualizing linear relationships.tex
+++ b/05C-Visualizing linear relationships.tex
@@ -1,32 +1,77 @@
+\documentclass{beamer}
+
+\usepackage{framed}
+\usepackage{graphicx}
+
+\begin{document}
 %============================================================%
 \section{Conditioning on other variables}
 \begin{frame}
-The plots above show many ways to explore the relationship between a pair of variables. Often, however, a more interesting question is “how does the relationship between these two variables change as a function of a third variable?” This is where the difference between regplot() and lmplot() appears. While regplot() always shows a single relationsihp, lmplot() combines regplot() with FacetGrid to provide an easy interface to show a linear regression on “faceted” plots that allow you to explore interactions with up to three additional categorical variables.
+	\begin{itemize}
+\item The plots above show many ways to explore the relationship between a pair of variables.
+\item Often, however, a more interesting question is “how does the relationship between these two variables change as a function of a third variable?” 
+\item This is where the difference between regplot() and \texttt{lmplot()} appears. 
+\item While regplot() always shows a single relationsihp, \texttt{lmplot()} combines \texttt{regplot()} with FacetGrid to provide an easy interface to show a linear regression on “faceted” plots that allow you to explore interactions with up to three additional categorical variables.
+	\end{itemize}
+
 \end{frame}
 %===========================================================%
 \begin{frame}[fragile]
+	\frametitle{Seaborn Workshop}
 \large
 
 The best way to separate out a relationship is to plot both levels on the same axes and to use color to distinguish them:
-
+\begin{verbatim}
 sns.lmplot(x="total_bill", y="tip", hue="smoker", data=tips);
-../_images/regression_39_0.png
-In addition to color, it’s possible to use different scatterplot markers to make plots the reproduce to black and white better. You also have full control over the colors used:
+\end{verbatim}
 
+\begin{figure}
+	\centering
+	\includegraphics[width=0.7\linewidth]{images/regression_39_0}
+\end{figure}
+\end{frame}
+%===========================================================%
+\begin{frame}[fragile]
+	\frametitle{Seaborn Workshop}
+	\large
+	
+	In addition to color, it’s possible to use different scatterplot markers to make plots the reproduce to black and white better. You also have full control over the colors used:
+\begin{verbatim}
 sns.lmplot(x="total_bill", y="tip", hue="smoker", data=tips,
            markers=["o", "x"], palette="Set1");
-../_images/regression_41_0.png
+ \end{verbatim}
+\begin{figure}
+	\centering
+	\includegraphics[width=0.7\linewidth]{images/regression_41_0}
+\end{figure}
 \end{frame}
 %==============================================%
 \begin{frame}[fragile]
 	\large
 To add another variable, you can draw multiple “facets” which each level of the variable appearing in the rows or columns of the grid:
-
+\begin{verbatim}
 sns.lmplot(x="total_bill", y="tip", hue="smoker", col="time", data=tips);
-../_images/regression_43_0.png
+\end{verbatim}
+
+\begin{figure}
+\centering
+\includegraphics[width=0.7\linewidth]{images/regression_43_0}
+\end{figure}
+
+\end{frame}
+%===========================================================%
+\begin{frame}[fragile]
+	\frametitle{Seaborn Workshop}
+	\large
+\begin{verbatim}
 sns.lmplot(x="total_bill", y="tip", hue="smoker",
-           col="time", row="sex", data=tips);
-../_images/regression_44_0.png
+col="time", row="sex", data=tips);
+\end{verbatim}
+
+\begin{figure}
+	\centering
+	\includegraphics[width=0.7\linewidth]{images/regression_44_0}
+\end{figure}
 \end{frame}
 %=============================================================%
 \section{Controlling the size and shape of the plot}
@@ -46,15 +91,45 @@ f, ax = plt.subplots(figsize=(5, 6))
 sns.regplot(x="total_bill", y="tip", data=tips, ax=ax);
 \end{verbatim}
 \end{framed}
-../_images/regression_46_0.png
+\begin{figure}
+	\centering
+	\includegraphics[width=0.7\linewidth]{images/regression_46_0}
+\end{figure}
+\end{frame}
+%===========================================================%
+\begin{frame}[fragile]
+	\frametitle{Seaborn Workshop}
+	\large
+	
 In contrast, the size and shape of the lmplot() figure is controlled through the FacetGrid interface using the size and aspect parameters, which apply to each facet in the plot, not to the overall figure itself:
+\end{frame}
+%===========================================================%
+\begin{frame}[fragile]
+	\frametitle{Seaborn Workshop}
+	\large
+	\begin{verbatim}
+sns.lmplot(x="total_bill", y="tip", col="day", data=tips,
+col_wrap=2, size=3);
+	\end{verbatim}
 
-sns.lmplot(x="total_bill", y="tip", col="day", data=tips,
-           col_wrap=2, size=3);
-../_images/regression_48_0.png
-sns.lmplot(x="total_bill", y="tip", col="day", data=tips,
-           aspect=.5);
-../_images/regression_49_0.png
+\begin{figure}
+	\centering
+	\includegraphics[width=0.7\linewidth]{images/regression_48_0}
+\end{figure}
+\end{frame}
+%===========================================================%
+\begin{frame}[fragile]
+	\frametitle{Seaborn Workshop}
+	\large
+\begin{verbatim}
+	sns.lmplot(x="total_bill", y="tip", col="day", data=tips,
+	aspect=.5);
+\end{verbatim}
+
+\begin{figure}
+	\centering
+	\includegraphics[width=0.7\linewidth]{images/regression_49_0}
+\end{figure}
 %============================================================%
-\end{fra,e}
+\end{frame}
 \end{document}
