--- a/07A-Plotting on data-aware grids.tex
+++ b/07A-Plotting on data-aware grids.tex
@@ -1,12 +1,18 @@
 
-\end{frame}
+\documentclass{beamer}
+
+\usepackage{framed}
+\usepackage{graphicx}
+
+\begin{document}
 %====================================%
 \begin{frame}[fragile]
 	\frametitle{Seaborn Workshop}
 	\large
 Plotting on data-aware grids
 \begin{itemize}
-\item When exploring medium-dimensional data, a useful approach is to draw multiple instances of the same plot on different subsets of your dataset. This technique is sometimes called either “lattice”, or “trellis” plotting, and it is related to the idea of “small multiples”. It allows a viewer to quickly extract a large amount of information about complex data. 
+\item When exploring medium-dimensional data, a useful approach is to draw multiple instances of the same plot on different subsets of your dataset. 
+\item This technique is sometimes called either “lattice”, or “trellis” plotting, and it is related to the idea of “small multiples”. It allows a viewer to quickly extract a large amount of information about complex data. 
 \item Matplotlib offers good support for making figures with multiple axes; seaborn builds on top of this to directly link the structure of the plot to the structure of your dataset.
 \end{itemize}
 \end{frame}
@@ -72,6 +78,7 @@ np.random.seed(sum(map(ord, "axis_grids")))
 The class is used by initializing a FacetGrid object with a dataframe and the names of the variables that will form the row, column, or hue dimensions of the grid. These variables should be categorical or discrete, and then the data at each level of the variable will be used for a facet along that axis. For example, say we wanted to examine differences between lunch and dinner in the tips dataset.
 
 \end{frame}
+
 %====================================%
 \begin{frame}[fragile]
 \frametitle{Seaborn Workshop}
@@ -110,6 +117,8 @@ g.add_legend();
 ../_images/axis_grids_12_0.png
 \end{verbatim}
 \end{frame}
+
+
 %====================================%
 \begin{frame}[fragile]
 \frametitle{Seaborn Workshop}
@@ -154,7 +163,7 @@ g.map(sns.boxplot, "deck", "age");
 \begin{frame}[fragile]
 \frametitle{Seaborn Workshop}
 \large
-The default ordering of the facets is derived from the information in the DataFrame. If the variable used to define facets has a categorical type, then the order of the categories is used. Otherwise, the facets will be in the order of appearence of the category levels. It is possible, however, to specify an ordering of any facet dimension with the appropriate *_order parameter:
+The default ordering of the facets is derived from the information in the DataFrame. If the variable used to define facets has a categorical type, then the order of the categories is used. Otherwise, the facets will be in the order of appearence of the category levels. It is possible, however, to specify an ordering of any facet dimension with the appropriate \texttt{$\ast$\_order} parameter:
 
 \begin{verbatim}
 ordered_days = tips.day.value_counts().index
@@ -168,7 +177,11 @@ g.map(sns.distplot, "total_bill", hist=False, rug=True);
 \begin{frame}[fragile]
 \frametitle{Seaborn Workshop}
 \large
-Any seaborn color palette (i.e., something that can be passed to color\_palette() can be provided. You can also use a dictionary that maps the names of values in the hue variable to valid matplotlib colors:
+\begin{itemize}
+\item Any seaborn color palette (i.e., something that can be passed to color\_palette() can be provided. 
+\item You can also use a dictionary that maps the names of values in the hue variable to valid matplotlib colors:
+\end{itemize}
+
 \begin{verbatim}
 pal = dict(Lunch="seagreen", Dinner="gray")
 g = sns.FacetGrid(tips, hue="time", palette=pal, size=5)
@@ -181,8 +194,11 @@ g.add_legend();
 \begin{frame}[fragile]
 \frametitle{Seaborn Workshop}
 \large
+\begin{itemize}
+\item You can also let other aspects of the plot vary across levels of the hue variable, which can be helpful for making plots that will be more comprehensible when printed in black-and-white. 
+\item To do this, pass a dictionary to hue\_kws where keys are the names of plotting function keyword arguments and values are lists of keyword values, one for each level of the hue variable.
+\end{itemize}
 
-You can also let other aspects of the plot vary across levels of the hue variable, which can be helpful for making plots that will be more comprehensible when printed in black-and-white. To do this, pass a dictionary to hue_kws where keys are the names of plotting function keyword arguments and values are lists of keyword values, one for each level of the hue variable.
 \end{frame}
 %====================================%
 \begin{frame}[fragile]
@@ -222,7 +238,10 @@ g.map(sns.pointplot, "solutions", "score", color=".3", ci=None);
 \begin{frame}[fragile]
 \frametitle{Seaborn Workshop}
 \large
+\begin{verbatim}
 with sns.axes_style("white"):
+\end{verbatim}
+
 \begin{verbatim}
     g = sns.FacetGrid(tips, row="sex", col="smoker", margin_titles=True, size=2.5)
 g.map(plt.scatter, "total_bill", "tip", color="#334488", edgecolor="white", lw=.5);
@@ -268,7 +287,7 @@ g.set(xlim=(0, 60), ylim=(0, 14));
 \begin{itemize}
 \item You’re not limited to existing matplotlib and seaborn functions when using FacetGrid. However, to work properly, any function you use must follow a few rules:
 
-\item It must plot onto the “currently active” matplotlib Axes. This will be true of functions in the matplotlib.pyplot namespace, and you can call plt.gca to get a reference to the current Axes if you want to work directly with its methods.
+\item It must plot onto the “currently active” matplotlib Axes. This will be true of functions in the matplotlib.pyplot namespace, and you can call \texttt{plt.gca} to get a reference to the current Axes if you want to work directly with its methods.
 \item It must accept the data that it plots in positional arguments. Internally, FacetGrid will pass a Series of data for each of the named positional arguments passed to \texttt{FacetGrid.map()}.
 \end{itemize}
 
@@ -277,9 +296,17 @@ g.set(xlim=(0, 60), ylim=(0, 14));
 \begin{frame}[fragile]
 \frametitle{Seaborn Workshop}
 \large
-It must be able to accept color and label keyword arguments, and, ideally, it will do something useful with them. In most cases, it’s easiest to catch a generic dictionary of **kwargs and pass it along to the underlying plotting function.
-Let’s look at minimal example of a function you can plot with. This function will just take a single vector of data for each facet:
-
+\begin{itemize}
+\item It must be able to accept color and label keyword arguments, and, ideally, it will do something useful with them. 
+\item In most cases, it’s easiest to catch a generic dictionary of $\ast \ast$\texttt{kwargs} and pass it along to the underlying plotting function.
+\item Let’s look at minimal example of a function you can plot with. This function will just take a single vector of data for each facet:
+\end{itemize}
+\end{frame}
+%====================================%
+\begin{frame}[fragile]
+	\frametitle{Seaborn Workshop}
+	\large
+\begin{framed}
 \begin{verbatim}
 def quantile_plot(x, **kwargs):
     qntls, xr = stats.probplot(x, fit=False)
@@ -289,13 +316,14 @@ g = sns.FacetGrid(tips, col="sex", size=4)
 g.map(quantile_plot, "total_bill");
 ../_images/axis_grids_32_0.png
 \end{verbatim}
-
+\end{framed}
 \end{frame}
 %====================================%
 \begin{frame}[fragile]
 \frametitle{Seaborn Workshop}
 \large
 If we want to make a bivariate plot, you should write the function so that it accepts the x-axis variable first and the y-axis variable second:
+\begin{framed}
 \begin{verbatim}
 def qqplot(x, y, **kwargs):
 _, xr = stats.probplot(x, fit=False)
@@ -306,7 +334,7 @@ g = sns.FacetGrid(tips, col="smoker", size=4)
 g.map(qqplot, "total_bill", "tip");
 ../_images/axis_grids_34_0.png
 \end{verbatim}
-
+\end{framed}
 \end{frame}
 %====================================%
 \begin{frame}[fragile]
@@ -339,7 +367,12 @@ g.add_legend();
 \begin{frame}[fragile]
 \frametitle{Seaborn Workshop}
 \large
-Sometimes, though, you’ll want to map a function that doesn’t work the way you expect with the color and label keyword arguments. In this case, you’ll want to explictly catch them and handle them in the logic of your custom function. For example, this approach will allow use to map \texttt{plt.hexbin}, which otherwise does not play well with the FacetGrid API:
+\begin{itemize}
+\item Sometimes, though, you’ll want to map a function that doesn’t work the way you expect with the color and label keyword arguments. 
+\item In this case, you’ll want to explictly catch them and handle them in the logic of your custom function.
+\item  For example, this approach will allow use to map \texttt{plt.hexbin}, which otherwise does not play well with the FacetGrid API:
+\end{itemize}
+
 \end{frame}
 %====================================%
 \begin{frame}[fragile]
@@ -356,137 +389,6 @@ g.map(hexbin, "total_bill", "tip", extent=[0, 50, 0, 10]);
 ../_images/axis_grids_40_0.png
 \end{verbatim}
 \end{frame}
-\section{Plotting pairwise relationships with PairGrid and pairplot()}
-%====================================%
-\begin{frame}[fragile]
-\frametitle{Seaborn Workshop}
-\large
-Plotting pairwise relationships with PairGrid and pairplot()
-\begin{itemize}
-\item PairGrid also allows you to quickly draw a grid of small subplots using the same plot type to visualize data in each. 
-\item In a PairGrid, each row and column is assigned to a different variable, so the resulting plot shows each pairwise relationship in the dataset. 
-\item This style of plot is sometimes called a “scatterplot matrix”, as this is the most common way to show each relationship, but PairGrid is not limited to scatterplots.
-\end{itemize}
-\end{frame}
-%====================================%
-\begin{frame}[fragile]
-\frametitle{Seaborn Workshop}
-\large
 
-It’s important to understand the differences between a FacetGrid and a PairGrid. In the former, each facet shows the same relationship conditioned on different levels of other variables. In the latter, each plot shows a different relationship (although the upper and lower triangles will have mirrored plots). Using PairGrid can give you a very quick, very high-level summary of interesting relationships in your dataset.
-
-The basic usage of the class is very similar to FacetGrid. First you initialize the grid, then you pass plotting function to a map method and it will be called on each subplot. There is also a companion function, pairplot() that trades off some flexibility for faster plotting.
-\end{frame}
-%====================================%
-\begin{frame}[fragile]
-\frametitle{Seaborn Workshop}
-\large
-\begin{framed}
-	\begin{verbatim}
-iris = sns.load_dataset("iris")
-g = sns.PairGrid(iris)
-g.map(plt.scatter);
-../_images/axis_grids_42_0.png
-\end{verbatim}
-\end{framed}
-\end{frame}
-%====================================%
-\begin{frame}[fragile]
-\frametitle{Seaborn Workshop}
-\large
-It’s possible to plot a different function on the diagonal to show the univariate distribution of the variable in each column. Note that the axis ticks won’t correspond to the count or density axis of this plot, though.
-\begin{verbatim}
-g = sns.PairGrid(iris)
-g.map_diag(plt.hist)
-g.map_offdiag(plt.scatter);
-../_images/axis_grids_44_0.png
-\end{verbatim}
-\end{frame}
-%====================================%
-\begin{frame}[fragile]
-\frametitle{Seaborn Workshop}
-\largeA very common way to use this plot colors the observations by a separate categorical variable. For example, the iris dataset has four measurements for each of three different species of iris flowers so you can see how they differ.
-\begin{verbatim}
-g = sns.PairGrid(iris, hue="species")
-g.map_diag(plt.hist)
-g.map_offdiag(plt.scatter)
-g.add_legend();
-../_images/axis_grids_46_0.png
-\end{verbatim}
-By default every numeric column in the dataset is used, but you can focus on particular relationships if you want.
-\end{frame}
-%====================================%
-\begin{frame}[fragile]
-	\frametitle{Seaborn Workshop}
-	\large
-\begin{verbatim}
-	g = sns.PairGrid(iris, vars=["sepal_length", "sepal_width"], hue="species")
-g.map(plt.scatter);
-../_images/axis_grids_48_0.png
-\end{verbatim}
-\end{frame}
-%====================================%
-\begin{frame}[fragile]
-	\frametitle{Seaborn Workshop}
-	\large
-It’s also possible to use a different function in the upper and lower triangles to emphasize different aspects of the relationship.
-\begin{verbatim}
-g = sns.PairGrid(iris)
-g.map_upper(plt.scatter)
-g.map_lower(sns.kdeplot, cmap="Blues_d")
-g.map_diag(sns.kdeplot, lw=3, legend=False);
-../_images/axis_grids_50_0.png
-\end{verbatim}
-
-\end{frame}
-%====================================%
-\begin{frame}[fragile]
-\frametitle{Seaborn Workshop}
-\large
-
-The square grid with identity relationships on the diagonal is actually just a special case, and you can plot with different variables in the rows and columns.
-\begin{verbatim}
-g = sns.PairGrid(tips, y_vars=["tip"], x_vars=["total_bill", "size"], size=4)
-g.map(sns.regplot, color=".3")
-g.set(ylim=(-1, 11), yticks=[0, 5, 10]);
-../_images/axis_grids_52_0.png
-\end{verbatim}
-\end{frame}
-%====================================%
-\begin{frame}[fragile]
-	\frametitle{Seaborn Workshop}
-	\large
-Of course, the aesthetic attributes are configurable. For instance, you can use a different palette (say, to show an ordering of the hue variable) and pass keyword arguments into the plotting functions.
-\begin{verbatim}
-g = sns.PairGrid(tips, hue="size", palette="GnBu_d")
-g.map(plt.scatter, s=50, edgecolor="white")
-g.add_legend();
-../_images/axis_grids_54_0.png
-\end{verbatim}
-\end{frame}
-%====================================%
-\begin{frame}[fragile]
-\frametitle{Seaborn Workshop}
-\large
-
-PairGrid is flexible, but to take a quick look at a dataset, it can be easier to use pairplot(). This function uses scatterplots and histograms by default, although a few other kinds will be added (currently, you can also plot regression plots on the off-diagonals and KDEs on the diagonal).
-\begin{verbatim}
-sns.pairplot(iris, hue="species", size=2.5);
-../_images/axis_grids_56_0.png
-\end{verbatim}
-
-\end{frame}
-%====================================%
-\begin{frame}[fragile]
-	\frametitle{Seaborn Workshop}
-	\large
-	\begin{itemize}
-\item You can also control the aesthetics of the plot with keyword arguments, and it returns the PairGrid instance for further tweaking.
-
-	\end{itemize}
-
-g = sns.pairplot(iris, hue="species", palette="Set2", diag_kind="kde", size=2.5)
-../_images/axis_grids_58_0.png
-\end{frame}
-%====================================%
+%=========================================================== %
 \end{document}
